# RL-DQN

./: .gitignore  Makefile  README.md  RL-DQN.ipynb  RL-DQN_2.ipynb  RL_DQN.ipynb  main.py  pyproject.toml
.github/workflows/: run-algo.yml
config/: config.yml
dqn_rl/: __init__.py  model.py
img/: duelling_dqn_rewards.csv  simple_dqn_rewards.csv
models/: duelling_dqn.pt
src/: __init__.py  model.py
