[tool.poetry]
name = "dqn-rl"
version = "0.1.0"
description = "DQN Project for Reinforcement Learning."
authors = ["Bast-94"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = {version = "^2.5.2", allow-prereleases = true}
numpy = {version = "^1.26.1", allow-prereleases = true}
jupyterlab = {version = "^4.1.0a2", allow-prereleases = true}
matplotlib = {version = "^3.8.0", allow-prereleases = true}
gymnasium = { version = "^0.29.1", allow-prereleases = true, extras = ["atari","accept-rom-license"]}
pytest = {version = "^6.2.5", allow-prereleases = true}
tqdm = {version = "^4.62.3", allow-prereleases = true}
isort = {version = "^5.12.0", allow-prereleases = true}
opencv-python-headless = {version ="^4.8.1.78", allow-prereleases = true}
opencv-contrib-python-headless = {version ="^4.8.1.78", allow-prereleases = true}
imageio = {version ="^2.31.6", allow-prereleases = true}
pandas = {version ="^2.1.2", allow-prereleases = true}
tabulate = {version ="^0.9.0", allow-prereleases = true}
py-utils = {git = "https://github.com/Bast-94/utils.git"}
torch = ">=2.0.0, !=2.0.1, !=2.1.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
